fix: downsize the footer's social block on mobile vers.

--- a/online-zoo/assets/styles/_footer.scss
+++ b/online-zoo/assets/styles/_footer.scss
@@ -294,6 +294,7 @@
 
 		&__socials {
 			width: 194px;
+			height: 26px;
 			margin-left: auto;
 			margin-right: auto;
 
