--- a/online-zoo/pages/donate/style.css
+++ b/online-zoo/pages/donate/style.css
@@ -1092,6 +1092,7 @@ picture {
   }
   .footer__socials {
     width: 194px;
+    height: 26px;
     margin-left: auto;
     margin-right: auto;
     display: flex;
